--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,6 +6,10 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 */
+/*
+	Custom edits to Prologue by Grace for 
+	ghraciella.github.io
+*/
 
 html, body, div, span, applet, object,
 iframe, h1, h2, h3, h4, h5, h6, p, blockquote,
@@ -84,7 +88,8 @@ input, select, textarea {
 
 	body {
 		background: #fff;
-		font-family: 'Source Sans Pro', sans-serif;
+		/* font-family: 'Source Sans Pro', sans-serif; */
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
@@ -103,7 +108,8 @@ input, select, textarea {
 		}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
+		/* font-family: 'Source Sans Pro', sans-serif; */
+		font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 		font-size: 19pt;
 		font-weight: 300;
 		line-height: 1.75em;
@@ -1993,6 +1999,7 @@ input, select, textarea {
 		.button:active {
 			background-color: #7eaeac;
 		}
+
 
 /* Item */
 
